# mpc-compiler-additions

./: .autopriv_version  .deps_run  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .mpc_comp_additions_version  AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  autopriv_deploy.sh  configure  configure.ac  extls_deploy  gen_archive.sh  gen_spack.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
config/: helper.sh  sources.txt  spack_recipe.py  variants.txt  versions.txt
config/patches/autopriv/binutils/: 2.25.patch  2.27.patch  2.28.patch  2.29.1.patch  2.31.1.patch  2.32.patch  2.33.1.patch  2.34.patch  2.35.patch  2.36.1.patch  2.36.patch  2.37.patch  2.38.patch  2.39.patch  2.40.patch  2.41.patch  2.42.patch  2.43.patch
config/patches/autopriv/gcc/: 10.1.0.patch  10.2.0.patch  10.3.0.patch  11.1.0.patch  11.2.0.patch  11.3.0.patch  12.1.0.patch  12.2.0.patch  12.3.0.patch  12.4.0.patch  13.3.0.patch  14.2.0.patch  4.8.0.patch  4.8.5.patch  6.2.0.patch  7.2.0.patch  7.3.0.patch  7.4.0.patch  7.5.0.patch  8.1.0.patch  8.2.0.patch  8.3.0.patch  8.4.0.patch  9.1.0.patch  9.2.0.patch  9.3.0.patch
config/patches/workshare/gcc/: 7.3.0.patch
dynpriv/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  plugin4.cpp  plugin6.cpp  plugin7.cpp
dynpriv-plugin/: Makefile.in  config.h.in
dynpriv-plugin/autom4te.cache/: output.2  requests  traces.0
dynpriv-plugin/src/: Makefile.in  plugin.cpp  plugin_backward.cpp
dynpriv/autom4te.cache/: output.1  output.3  output.4  output.5  output.6  requests  traces.0  traces.0t  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
dynpriv/src/: Makefile.am  Makefile.in  plugin.cpp  plugin_backward.cpp
libextls/: .extls_version  MD5SUMS  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
libextls/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libextls/doc/: Makefile.am  Makefile.in
libextls/src/: Makefile  Makefile.am  Makefile.in  extls.c  extls.h  extls_atomics.h  extls_common.c  extls_common.h  extls_dl.c  extls_dl.h  extls_dynamic.c  extls_dynamic.h  extls_hls.c  extls_hls.h  extls_init.c  extls_init.h  extls_list.h  extls_locks.h  extls_mpc.c  extls_mpc.h  extls_optim_tls.c  extls_optim_tls.h  extls_segmt_hdler.c  extls_segmt_hdler.h  extls_topo.h
libextls/test/access_model/: ctx_herit.c  ctx_herit_test_LE.c  optim_tls_dlopen.c
libextls/test/common/: basic.c  tls_segs_map.c
libextls/test/hls/: hls_simple.c
libextls/test/register/: static_tls_herit.c  static_tls_multiple.c  static_tls_no_register.c
libextls/tools/: Makefile.am  Makefile.in  extls.pc.in  extls.sh.in  gen_archive.sh  gen_hashes.sh
patches/: binutils-2.25.patch  gcc-4.8.5.patch
spack/repos/: repo.yaml
src/autopriv/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
src/autopriv/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/autopriv/dynpriv-plugin/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/autopriv/dynpriv-plugin/autom4te.cache/: output.1  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.6
src/autopriv/dynpriv-plugin/src/: Makefile.am  Makefile.in  plugin.cpp
src/autopriv/getopt/: LICENCE  Makefile.am  Makefile.in  getopt.c  getopt.h.in  getopt_long.c  getsubopt.c
src/autopriv/libextls/: AUTHORS  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac
src/autopriv/libextls/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3  traces.4
src/autopriv/libextls/doc/: Doxyfile.in  Makefile.in
src/autopriv/libextls/src/: Makefile  Makefile.in  extls.c  extls.h  extls_atomics.h  extls_common.c  extls_common.h  extls_dl.c  extls_dynamic.c  extls_hls.c  extls_mpc.c  extls_optim_tls.c  extls_segmt_hdler.c  extls_types.h
src/autopriv/libextls/test/access_model/: ctx_herit_test_IE.c  ctx_herit_test_lib.c  hello_world.c  optim_tls_combined.c  optim_tls_dl_lib.c  optim_tls_dlsym.c  optim_tls_extern.c  optim_tls_extern_lib.c  optim_tls_local.c
src/autopriv/libextls/test/register/: static_tls.c
src/autopriv/libextls/tools/: Makefile.in  extls.pc.in
src/autopriv/tests/: Makefile.am  Makefile.in
src/autopriv/tests/nopriv/: Makefile.am  Makefile.in  getopt.c  nopriv_base.c
src/autopriv/tests/priv/: Makefile.am  Makefile.in  basic.c  dyn.c  dyn_static_colla.c  getopt.c  hls.c
src/autopriv/tests/unsupported/: Makefile.am  Makefile.in
src/autopriv/tests/wrappers/: Makefile.in  main_c.c  main_cpp.cpp  run.sh
src/autopriv/tools/: Makefile.am  Makefile.in  ap++.in  apcc.in  apfortran.in  autopriv.pc.in  autopriv.sh.in
src/workshare/: Makefile.am  Makefile.in  configure  configure.ac  configure.scan
src/workshare/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/workshare/tests/: Makefile.am  Makefile.in
src/workshare/tests/fortran/: Makefile.am  Makefile.in  libstub.c  simple.f90
src/workshare/tests/include/: ws_test.h
src/workshare/tests/simple/: Makefile  Makefile.am  Makefile.in  simple.c  simple2.c  test_stealing_collectives.c  test_stealing_workers.c
tests/: Makefile.am  Makefile.in
tests/include/: autopriv_test.h
tests/nopriv/: Makefile.am  Makefile.in
tests/priv/: Makefile.am  Makefile.in  dyn_static.c  dyn_static_collb.c  hls.c  keywords.c  noctx.c  threads.c
tests/unsupported/: Makefile.am  Makefile.in  hls_dyn.c
tests/wrappers/: Makefile.am  Makefile.in  hls.c  main.c  run.sh
tools/: Makefile.am  Makefile.in  ap++.in  apcc.in  apfortran.in  autopriv.sh.in  extls.pc.in  extls_vars.sh  extls_vars.sh.in
